# mkdocs-material-github-flavored-template

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt  versions.json
.github/workflows/: check-docs.yml  deploy-mkdocs-on-latest.yml  deploy.yml
docs/: CHANGELOG.md
docs/mkdocs/: gitlab_pages.md  mkdocstrings.md
docs/stylesheets/: mkdocstrings.css
latest/: 404.html  index.html  sitemap.xml
latest/CHANGELOG/: index.html
latest/mkdocs/admonitions/: index.html
latest/mkdocs/api_reference/: index.html
latest/mkdocs/gitlab_pages/: index.html
latest/mkdocs/mkdocs/: index.html
latest/mkdocs/mkdocstrings/: index.html
latest/reference/SUMMARY/: index.html
latest/reference/my_project/: index.html
latest/search/: search_index.json
scripts/: gen_ref_nav.py
src/my_project/: _version.py  two_numbers.py
v0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.0/CHANGELOG/: index.html
v0.1.0/mkdocs/gitlab_pages/: index.html
v0.1.0/mkdocs/mkdocstrings/: index.html
v0.1.0/reference/SUMMARY/: index.html
v0.1.0/reference/my_project/: index.html
v0.1.0/search/: search_index.json
v0.1.1/: 404.html  index.html  sitemap.xml
v0.1.1/CHANGELOG/: index.html
v0.1.1/mkdocs/gitlab_pages/: index.html
v0.1.1/mkdocs/mkdocstrings/: index.html
v0.1.1/reference/SUMMARY/: index.html
v0.1.1/reference/my_project/: index.html
v0.1.1/search/: search_index.json
v0.1.2/: 404.html  index.html  sitemap.xml
v0.1.2/CHANGELOG/: index.html
v0.1.2/mkdocs/gitlab_pages/: index.html
v0.1.2/search/: search_index.json
(+7 files in other folders)
